--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -11,9 +11,39 @@ permissions:
   contents: read
   pull-requests: write
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
+  setup-backend:
+    name: 'Setup Backend'
+    runs-on: ubuntu-latest
+    steps:
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@e3dd6a429d7300a6a4c196c26e071d42e0343502 # v4.0.2
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
+
+    - name: Create S3 Bucket
+      run: |
+        if ! aws s3api head-bucket --bucket ${{ secrets.TF_VAR_STATE_BUCKET_NAME }} 2>/dev/null; then
+          aws s3api create-bucket --bucket ${{ secrets.TF_VAR_STATE_BUCKET_NAME }} --region ${{ secrets.AWS_REGION }} --create-bucket-configuration LocationConstraint=${{ secrets.AWS_REGION }}
+          aws s3api put-bucket-versioning --bucket ${{ secrets.TF_VAR_STATE_BUCKET_NAME }} --versioning-configuration Status=Enabled
+          aws s3api put-bucket-encryption --bucket ${{ secrets.TF_VAR_STATE_BUCKET_NAME }} --server-side-encryption-configuration '{"Rules": [{"ApplyServerSideEncryptionByDefault": {"SSEAlgorithm": "AES256"}}]}'
+        fi
+
+    - name: Create DynamoDB Table
+      run: |
+        if ! aws dynamodb describe-table --table-name ${{ secrets.TF_VAR_DYNAMODB_TABLE_NAME }} >/dev/null 2>&1; then
+          aws dynamodb create-table --table-name ${{ secrets.TF_VAR_DYNAMODB_TABLE_NAME }} --attribute-definitions AttributeName=LockID,AttributeType=S --key-schema AttributeName=LockID,KeyType=HASH --billing-mode PAY_PER_REQUEST
+        fi
+
   terraform:
     name: 'Terraform'
+    needs: setup-backend
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -37,20 +67,6 @@ jobs:
       with:
         terraform_version: '1.9.5'
 
-    - name: Ensure Backend Resources
-      run: |
-        # Create S3 bucket if it doesn't exist
-        if ! aws s3api head-bucket --bucket ${{ secrets.TF_VAR_STATE_BUCKET_NAME }} 2>/dev/null; then
-          aws s3api create-bucket --bucket ${{ secrets.TF_VAR_STATE_BUCKET_NAME }} --region ${{ secrets.AWS_REGION }} --create-bucket-configuration LocationConstraint=${{ secrets.AWS_REGION }}
-          aws s3api put-bucket-versioning --bucket ${{ secrets.TF_VAR_STATE_BUCKET_NAME }} --versioning-configuration Status=Enabled
-          aws s3api put-bucket-encryption --bucket ${{ secrets.TF_VAR_STATE_BUCKET_NAME }} --server-side-encryption-configuration '{"Rules": [{"ApplyServerSideEncryptionByDefault": {"SSEAlgorithm": "AES256"}}]}'
-        fi
-
-        # Create DynamoDB table if it doesn't exist
-        if ! aws dynamodb describe-table --table-name ${{ secrets.TF_VAR_DYNAMODB_TABLE_NAME }} >/dev/null 2>&1; then
-          aws dynamodb create-table --table-name ${{ secrets.TF_VAR_DYNAMODB_TABLE_NAME }} --attribute-definitions AttributeName=LockID,AttributeType=S --key-schema AttributeName=LockID,KeyType=HASH --billing-mode PAY_PER_REQUEST
-        fi
-
     - name: Terraform Init
       id: init
       run: |
@@ -70,7 +86,11 @@ jobs:
 
     - name: Terraform Plan
       id: plan
-      run: terraform plan -no-color
+      run: |
+        terraform plan -no-color \
+          -var="aws_region=${{ secrets.AWS_REGION }}" \
+          -var="state_bucket_name=${{ secrets.TF_VAR_STATE_BUCKET_NAME }}" \
+          -var="dynamodb_table_name=${{ secrets.TF_VAR_DYNAMODB_TABLE_NAME }}"
       continue-on-error: true
 
     - name: Update Pull Request
@@ -122,7 +142,11 @@ jobs:
 
     - name: Terraform Apply
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-      run: terraform apply -auto-approve
+      run: |
+        terraform apply -auto-approve \
+          -var="aws_region=${{ secrets.AWS_REGION }}" \
+          -var="state_bucket_name=${{ secrets.TF_VAR_STATE_BUCKET_NAME }}" \
+          -var="dynamodb_table_name=${{ secrets.TF_VAR_DYNAMODB_TABLE_NAME }}"
 
     - name: Cleanup Terraform Directory
       if: always()
