--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -30,15 +30,28 @@ jobs:
     - name: Create S3 Bucket
       run: |
         if ! aws s3api head-bucket --bucket ${{ secrets.TF_VAR_STATE_BUCKET_NAME }} 2>/dev/null; then
-          aws s3api create-bucket --bucket ${{ secrets.TF_VAR_STATE_BUCKET_NAME }} --region ${{ secrets.AWS_REGION }} --create-bucket-configuration LocationConstraint=${{ secrets.AWS_REGION }}
-          aws s3api put-bucket-versioning --bucket ${{ secrets.TF_VAR_STATE_BUCKET_NAME }} --versioning-configuration Status=Enabled
-          aws s3api put-bucket-encryption --bucket ${{ secrets.TF_VAR_STATE_BUCKET_NAME }} --server-side-encryption-configuration '{"Rules": [{"ApplyServerSideEncryptionByDefault": {"SSEAlgorithm": "AES256"}}]}'
+          aws s3api create-bucket \
+            --bucket ${{ secrets.TF_VAR_STATE_BUCKET_NAME }} \
+            --region ${{ secrets.AWS_REGION }} \
+            --create-bucket-configuration LocationConstraint=${{ secrets.AWS_REGION }}
+          
+          aws s3api put-bucket-versioning \
+            --bucket ${{ secrets.TF_VAR_STATE_BUCKET_NAME }} \
+            --versioning-configuration Status=Enabled
+          
+          aws s3api put-bucket-encryption \
+            --bucket ${{ secrets.TF_VAR_STATE_BUCKET_NAME }} \
+            --server-side-encryption-configuration '{"Rules": [{"ApplyServerSideEncryptionByDefault": {"SSEAlgorithm": "AES256"}}]}'
         fi
 
     - name: Create DynamoDB Table
       run: |
         if ! aws dynamodb describe-table --table-name ${{ secrets.TF_VAR_DYNAMODB_TABLE_NAME }} >/dev/null 2>&1; then
-          aws dynamodb create-table --table-name ${{ secrets.TF_VAR_DYNAMODB_TABLE_NAME }} --attribute-definitions AttributeName=LockID,AttributeType=S --key-schema AttributeName=LockID,KeyType=HASH --billing-mode PAY_PER_REQUEST
+          aws dynamodb create-table \
+            --table-name ${{ secrets.TF_VAR_DYNAMODB_TABLE_NAME }} \
+            --attribute-definitions AttributeName=LockID,AttributeType=S \
+            --key-schema AttributeName=LockID,KeyType=HASH \
+            --billing-mode PAY_PER_REQUEST
         fi
 
   terraform:
@@ -87,11 +100,21 @@ jobs:
     - name: Terraform Plan
       id: plan
       run: |
+        # Attempt to release the state lock if it exists
+        terraform force-unlock -force ${{ secrets.TF_STATE_KEY }} || true
+        
+        # Run the plan
         terraform plan -no-color \
           -var="aws_region=${{ secrets.AWS_REGION }}" \
           -var="state_bucket_name=${{ secrets.TF_VAR_STATE_BUCKET_NAME }}" \
           -var="dynamodb_table_name=${{ secrets.TF_VAR_DYNAMODB_TABLE_NAME }}"
       continue-on-error: true
+
+    - name: Check Terraform Plan Status
+      if: steps.plan.outcome == 'failure'
+      run: |
+        echo "Terraform plan failed. Please check the logs for more details."
+        exit 1
 
     - name: Update Pull Request
       uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
