--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -117,7 +117,8 @@ jobs:
         terraform show -no-color
         exit 1
 
-    - name: Update PR or Create Commit Comment
+    - name: Update Pull Request
+      if: github.event_name == 'pull_request'
       uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
       env:
         PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
@@ -139,21 +140,12 @@ jobs:
 
           *Pushed by: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
 
-          if (context.eventName === 'pull_request') {
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: output
-            })
-          } else {
-            github.rest.repos.createCommitComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              commit_sha: context.sha,
-              body: output
-            });
-          }
+          github.rest.issues.createComment({
+            issue_number: context.issue.number,
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            body: output
+          })
 
     - name: Terraform Apply
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
