--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -45,10 +45,7 @@ jobs:
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      run: terraform init \
-          -backend-config="bucket=${{ secrets.TF_VAR_STATE_BUCKET_NAME }}" \
-          -backend-config="key=${{ secrets.TF_STATE_KEY }}" \
-          -backend-config="dynamodb_table=${{ secrets.TF_VAR_DYNAMODB_TABLE_NAME }}"
+      run: terraform init
 
     - name: Terraform Plan
       env:
