--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -42,10 +42,13 @@ jobs:
       run: terraform fmt
 
     - name: Terraform Init
+      run: terraform init \
+          -backend-config="bucket=${{ secrets.TF_VAR_STATE_BUCKET_NAME }}" \
+          -backend-config="key=terraform.tfstate" \ 
+          -backend-config="region=${{ secrets.AWS_REGION }}" 
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      run: terraform init
 
     - name: Terraform Plan
       env:
