--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -16,7 +16,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
- TF_LOG: DEBUG
+  TF_LOG: DEBUG
 
 jobs:
   terraform:
@@ -45,20 +45,17 @@ jobs:
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        TF_VAR_state_bucket_name: ${{ secrets.TF_VAR_STATE_BUCKET_NAME }}
+        TF_VAR_dynamodb_table_name: ${{ secrets.TF_VAR_DYNAMODB_TABLE_NAME }}
+        TF_VAR_tf_state_key: ${{ secrets.TF_STATE_KEY }}
+        TF_VAR_aws_region: ${{ secrets.AWS_REGION }}
       run: |
         terraform init \
-          -backend-config="bucket=${{ secrets.TF_VAR_STATE_BUCKET_NAME }}" \
-          -backend-config="key=terraform.tfstate" \
-          -backend-config="region=${{ secrets.AWS_REGION }}"
+          -backend-config="bucket=${{ env.TF_VAR_state_bucket_name }}" \
+          -backend-config="key=${{ env.TF_VAR_tf_state_key }}" \
+          -backend-config="region=${{ env.TF_VAR_aws_region }}" \
+          -backend-config="dynamodb_table=${{ env.TF_VAR_dynamodb_table_name }}"
 
-        terraform plan \
-          -backend-config="bucket=${{ secrets.TF_VAR_STATE_BUCKET_NAME }}" \
-          -backend-config="key=terraform.tfstate" \
-          -backend-config="region=${{ secrets.AWS_REGION }}"
+        terraform plan
 
-        terraform apply \
-          -auto-approve \
-          -input=false \
-          -backend-config="bucket=${{ secrets.TF_VAR_STATE_BUCKET_NAME }}" \
-          -backend-config="key=terraform.tfstate" \
-          -backend-config="region=${{ secrets.AWS_REGION }}"
+        terraform apply -auto-approve -input=false 
