--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -32,14 +32,10 @@ jobs:
       with:
         fetch-depth: 1
 
-    - name: Install Terraform
-      run: |
-        wget -O- https://apt.releases.hashicorp.com/gpg | gpg --dearmor | sudo tee /usr/share/keyrings/hashicorp-archive-keyring.gpg
-        echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
-        sudo apt update && sudo apt install terraform
-
-    - name: Terraform Format
-      run: terraform fmt
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@b9cd54a3c349d3f38e8881555d616ced269862dd # v3.1.2
+      with:
+        terraform_version: '1.9.5'
 
     - name: Execute Terraform
       env:
