--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -15,9 +15,6 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
-env:
-  TF_LOG: DEBUG
-
 jobs:
   terraform:
     name: 'Terraform'
@@ -25,6 +22,14 @@ jobs:
     defaults:
       run:
         working-directory: ./terraform
+    env:
+      TF_LOG: DEBUG
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      TF_VAR_state_bucket_name: ${{ secrets.TF_VAR_STATE_BUCKET_NAME }}
+      TF_VAR_dynamodb_table_name: ${{ secrets.TF_VAR_DYNAMODB_TABLE_NAME }}
+      TF_VAR_tf_state_key: ${{ secrets.TF_STATE_KEY }}
+      TF_VAR_aws_region: ${{ secrets.AWS_REGION }}
 
     steps:
     - name: Checkout
@@ -37,21 +42,15 @@ jobs:
       with:
         terraform_version: '1.9.5'
 
-    - name: Execute Terraform
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        TF_VAR_state_bucket_name: ${{ secrets.TF_VAR_STATE_BUCKET_NAME }}
-        TF_VAR_dynamodb_table_name: ${{ secrets.TF_VAR_DYNAMODB_TABLE_NAME }}
-        TF_VAR_tf_state_key: ${{ secrets.TF_STATE_KEY }}
-        TF_VAR_aws_region: ${{ secrets.AWS_REGION }}
-      run: |
-        terraform init \
-          -backend-config="bucket=${{ env.TF_VAR_state_bucket_name }}" \
-          -backend-config="key=${{ env.TF_VAR_tf_state_key }}" \
-          -backend-config="region=${{ env.TF_VAR_aws_region }}" \
-          -backend-config="dynamodb_table=${{ env.TF_VAR_dynamodb_table_name }}"
+    - name: Terraform Init
+      run: terraform init \
+        -backend-config="bucket=${{ env.TF_VAR_state_bucket_name }}" \
+        -backend-config="key=${{ env.TF_VAR_tf_state_key }}" \
+        -backend-config="region=${{ env.TF_VAR_aws_region }}" \
+        -backend-config="dynamodb_table=${{ env.TF_VAR_dynamodb_table_name }}"
 
-        terraform plan
+    - name: Terraform Plan
+      run: terraform plan
 
-        terraform apply -auto-approve -input=false 
+    - name: Terraform Apply
+      run: terraform apply -auto-approve -input=false
