--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -102,5 +102,5 @@ jobs:
     #       })
 
     - name: Terraform Apply
-      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+      # if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       run: terraform apply -auto-approve -input=false
