--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -67,7 +67,7 @@ jobs:
       id: validate
       run: terraform validate -no-color
 
-    - name: Import existing resources
+    - name: Handle existing resources
       run: |
         # Import S3 bucket and DynamoDB table
         terraform import aws_s3_bucket.terraform_state ${{ secrets.TF_VAR_STATE_BUCKET_NAME }} || true
@@ -80,10 +80,14 @@ jobs:
         # Import organization-wide budget
         terraform import aws_budgets_budget.organization_wide "${AWS_ACCOUNT_ID}:OrganizationWideBudget" || true
         
-        # Dynamically import individual budgets
+        # Dynamically import individual budgets and accounts
         IFS=',' read -ra EMAILS <<< "${{ secrets.EMAIL_LIST }}"
-        for i in "${!EMAILS[@]}"; do
-          terraform import "aws_budgets_budget.individual[$i]" "${AWS_ACCOUNT_ID}:IndividualBudget-$i" || true
+        for email in "${EMAILS[@]}"; do
+          account_id=$(aws organizations list-accounts --query "Accounts[?Email=='${email}'].Id" --output text)
+          if [ ! -z "$account_id" ]; then
+            terraform import "aws_organizations_account.user_accounts[\"${email}\"]" "${account_id}" || true
+            terraform import "aws_budgets_budget.individual[\"${email}\"]" "${account_id}:IndividualBudget-${account_id}" || true
+          fi
         done
 
     - name: Terraform Plan
