--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -83,29 +83,28 @@ jobs:
       id: validate
       run: terraform validate -no-color
 
-    - name: Handle existing resources
+    - name: Import existing resources if needed
       run: |
-        # Import S3 bucket and DynamoDB table
-        terraform import aws_s3_bucket.terraform_state ${{ secrets.TF_VAR_STATE_BUCKET_NAME }} || true
-        terraform import aws_dynamodb_table.terraform_locks ${{ secrets.TF_VAR_DYNAMODB_TABLE_NAME }} || true
+        terraform import aws_s3_bucket.terraform_state ${{ env.TF_VAR_state_bucket_name }} || true
+        terraform import aws_dynamodb_table.terraform_locks ${{ env.TF_VAR_dynamodb_table_name }} || true
+
+        # # Get AWS Account ID
+        # AWS_ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
+        # echo "AWS Account ID: $AWS_ACCOUNT_ID"
         
-        # Get AWS Account ID
-        AWS_ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
-        echo "AWS Account ID: $AWS_ACCOUNT_ID"
+        # # Import organization-wide budget
+        # terraform import aws_budgets_budget.organization_wide "${AWS_ACCOUNT_ID}:OrganizationWideBudget" || true
         
-        # Import organization-wide budget
-        terraform import aws_budgets_budget.organization_wide "${AWS_ACCOUNT_ID}:OrganizationWideBudget" || true
-        
-        # Dynamically import individual budgets and accounts
-        IFS=',' read -ra EMAILS <<< "${{ secrets.EMAIL_LIST }}"
-        for email in "${EMAILS[@]}"; do
-          account_id=$(aws organizations list-accounts \
-            --query "Accounts[?Email=='${email}'].Id" --output text)
-          if [ ! -z "$account_id" ]; then
-            terraform import "aws_organizations_account.user_accounts[\"${email}\"]" "${account_id}" || true
-            terraform import "aws_budgets_budget.individual[\"${email}\"]" "${account_id}:IndividualBudget-${account_id}" || true
-          fi
-        done
+        # # Dynamically import individual budgets and accounts
+        # IFS=',' read -ra EMAILS <<< "${{ secrets.EMAIL_LIST }}"
+        # for email in "${EMAILS[@]}"; do
+        #   account_id=$(aws organizations list-accounts \
+        #     --query "Accounts[?Email=='${email}'].Id" --output text)
+        #   if [ ! -z "$account_id" ]; then
+        #     terraform import "aws_organizations_account.user_accounts[\"${email}\"]" "${account_id}" || true
+        #     terraform import "aws_budgets_budget.individual[\"${email}\"]" "${account_id}:IndividualBudget-${account_id}" || true
+        #   fi
+        # done
 
     - name: Terraform Plan
       id: plan
