--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -143,4 +143,4 @@ jobs:
 
     - name: Terraform Apply
       # if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-      run: terraform apply -auto-approve -input=false 
+      run: terraform apply -auto-approve -input=false -lock=false
