--- a/.github/workflows/cicd-aws-budgets.yml
+++ b/.github/workflows/cicd-aws-budgets.yml
@@ -25,7 +25,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./terraform
+        working-directory: ./terraform/aws/budgets
     env:
       TF_LOG: INFO
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
