--- a/.github/workflows/cicd-aws-budgets.yml
+++ b/.github/workflows/cicd-aws-budgets.yml
@@ -111,12 +111,13 @@ jobs:
     #         body: output
     #       })
 
-    - name: Terraform Apply
+    - name: Terraform Apply (Organization-Wide Budget)
+      # if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+      run: terraform apply -auto-approve -input=false -lock=false -replace aws_budgets_budget.organization_wide || true
+
+    - name: Terraform Apply (Individual Budgets)
       # if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       run: |
-        # Dynamically apply existing organization-wide budget
-        terraform apply -auto-approve -input=false -lock=false -replace aws_budgets_budget.organization_wide || true
-        # Dynamically apply individual budgets
         EMAIL_LIST="${{ secrets.EMAIL_LIST }}"
         IFS=',' read -r -a EMAIL_ARRAY <<< "$EMAIL_LIST"
         for i in "${!EMAIL_ARRAY[@]}"; do
