--- a/.github/workflows/cicd-aws-budgets.yml
+++ b/.github/workflows/cicd-aws-budgets.yml
@@ -56,7 +56,12 @@ jobs:
 
     - name: Terraform Init
       id: init
-      run: terraform init -upgrade -lock=false
+      run: |
+        terraform init \
+          -backend-config="bucket=${{ env.TF_VAR_state_bucket_name }}" \
+          -backend-config="key=${{ env.TF_VAR_tf_state_key }}" \
+          -backend-config="region=${{ env.TF_VAR_aws_region }}" \
+          -backend-config="dynamodb_table=${{ env.TF_VAR_dynamodb_table_name }}"
 
     - name: Terraform Format
       run: terraform fmt -check
