--- a/.github/workflows/deploy-tts-space.yml
+++ b/.github/workflows/deploy-tts-space.yml
@@ -47,7 +47,7 @@ jobs:
 
       - name: Push Files to Hugging Face Space
         run: |
-          REPO_URL="https://${{ secrets.HF_USERNAME }}:${{ secrets.HF_TOKEN }}@huggingface.co/spaces/${{ secrets.HF_SPACE }}.git"
+          REPO_URL="https://${{ secrets.HF_USERNAME }}:${{ secrets.HF_TOKEN }}@huggingface.co/${{ secrets.HF_SPACE }}.git"
           GIT_LFS_SKIP_SMUDGE=1 git clone "$REPO_URL" space
           rsync -av --delete ./huggingface/openai-tts/ ./space/
           cd space
