--- a/.github/workflows/deploy-tts-space.yml
+++ b/.github/workflows/deploy-tts-space.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     paths:
-      - 'huggingface/openai-tts/**'
+      - "huggingface/openai-tts/**"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -28,35 +28,21 @@ jobs:
           git config --global user.name "github-actions[bot]"
 
       - name: Checkout Repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
         with:
           fetch-depth: 1
 
       - name: Setup Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@f677139bbe7f9c59b41e40162b753c062f5d49a3 # v5.2.0
         with:
           python-version: "3.x"
 
-      - name: Install Dependencies
-        run: |
-          pip install --no-cache-dir --upgrade pip
-          pip install --no-cache-dir huggingface_hub[cli,hf_transfer]
+      - name: Install Hugging Face Hub
+        run: pip install --upgrade huggingface_hub
 
       - name: Login to Hugging Face
-        run: huggingface-cli login --token "${{ secrets.HF_TOKEN }}"
+        run: echo "${{ secrets.HF_TOKEN }}" | hf auth login --token-file -
 
-      - name: Clone Hugging Face Space Repository
+      - name: Upload Files to Hugging Face Space
         run: |
-          REPO_URL="https://${{ secrets.HF_USERNAME }}:${{ secrets.HF_TOKEN }}@huggingface.co/${{ secrets.HF_SPACE }}.git"
-          GIT_LFS_SKIP_SMUDGE=1 git clone "$REPO_URL" space
-
-      - name: Sync Files to Space Repository
-        run: |
-          rsync -av --delete ./huggingface/openai-tts/ ./space/
-
-      - name: Commit and Push Changes
-        working-directory: space
-        run: |
-          git add .
-          git commit --allow-empty -m "Update deployment on $(date -u +"%Y-%m-%dT%H:%M:%SZ")"
-          git push origin main
+          hf space upload ./huggingface/openai-tts --repo-id "${{ secrets.HF_USERNAME }}/${{ secrets.HF_SPACE }}" --recursive --overwrite
